frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: front
  name: frontend-ingress
  annotations: 
    # core-settings
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths: 
        - path: / 
          pathType: Prefix
          backend:
            service:
              name: frontend-svc # 서비스 파일의 metadata.name 과 같아야 한다. 
              port:
                number: 80
        - path: /api/
          pathType: Prefix
          backend:
            service:
              name: backend-svc
              port: 
                number: 8080
